# libatift-0.1

./: .gitignore  Makefile.am  Makefile.in  README.md  atift-0.1.pc.in  configure  configure.ac  ftconfig.c
.deps/: dom.Po  expatls.Po  ftconfig.Po  ftrt.Po  node.Po  stack.Po  xmlparse.Po  xmlrole.Po  xmltok.Po
