lib_LIBRARIES = libatift-0.1.a
libatift_0_1_a_SOURCES = dom.c ftconfig.c node.c xmlparse.c xmltok.c ftrt.c stack.c xmlrole.c expatls.c

library_includedir=$(includedir)/atift-0.1/ATI
library_include_HEADERS = ascii.h     ftconfig.h    iasciitab.h  stack.h    xmlparse.h  xmltok_impl.h asciitab.h  ftrt.h        latin1tab.h  utf8tab.h  xmlrole.h dom.h       ftsharedrt.h  nametab.h    xmldef.h   xmltok.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = atift-0.1.pc

